...
        <View style={styles.header}>
          <Image
            source={require("../../../assets/icon.png")}
            style={styles.logo}
            resizeMode="contain"
          />
          <Text style={styles.appName}>Barber Click</Text>
        </View>
        <TextInput
          style={styles.search}
          placeholder="Buscar barbearia..."
          value={search}
          onChangeText={setSearch}
...
