appId: com.barberclick.app
env:
  EMAIL: cliente@teste.com
  SENHA: "123456"
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible: "Entrar / Cadastrar.*"
    timeout: 60000
- tapOn: "Entrar / Cadastrar.*"
- assertVisible: "Fazer Login"
- tapOn: "E-mail"
- inputText: ${EMAIL}
- tapOn: "Senha"
- inputText: ${SENHA}
- pressKey: Enter
- tapOn: "Entrar"
- tapOn:
    text: "Agora não"
    optional: true
- assertVisible: "Barber Click"
