appId: com.barberclick.app
env:
  NOME: Cliente Teste
  EMAIL: novo-cliente@teste.com
  SENHA: "123456"
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible: "Entrar / Cadastrar.*"
    timeout: 60000
- tapOn: "Entrar / Cadastrar.*"
- tapOn: "Não tem conta? Cadastre-se"
- assertVisible: "Criar Conta"
- tapOn: "Cliente"
- tapOn: "Seu Nome"
- inputText: ${NOME}
- tapOn: "E-mail"
- inputText: ${EMAIL}
- tapOn: "Senha"
- inputText: ${SENHA}
- tapOn: "Confirme sua senha..."
- inputText: ${SENHA}
- pressKey: Enter
- tapOn: "Cadastrar"
- assertVisible: "Cadastro realizado com sucesso!"
- tapOn:
    text: "OK"
    optional: true
